fix scrollbar behavior and polish gallery

--- a/output.css
+++ b/output.css
@@ -26,6 +26,7 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-2xl: 42rem;
     --container-3xl: 48rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -363,6 +364,9 @@
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
+  .w-1\/6 {
+    width: calc(1/6 * 100%);
+  }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
@@ -483,6 +487,9 @@
   .overflow-x-scroll {
     overflow-x: scroll;
   }
+  .overflow-y-auto {
+    overflow-y: auto;
+  }
   .overflow-y-scroll {
     overflow-y: scroll;
   }
@@ -594,6 +601,12 @@
   }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
+  }
+  .pt-30 {
+    padding-top: calc(var(--spacing) * 30);
   }
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
@@ -753,6 +766,11 @@
       left: calc(27/100 * 100%);
     }
   }
+  .sm\:my-0 {
+    @media (width >= 40rem) {
+      margin-block: calc(var(--spacing) * 0);
+    }
+  }
   .sm\:h-120 {
     @media (width >= 40rem) {
       height: calc(var(--spacing) * 120);
@@ -823,6 +841,16 @@
       width: fit-content;
     }
   }
+  .sm\:w-full {
+    @media (width >= 40rem) {
+      width: 100%;
+    }
+  }
+  .sm\:max-w-2xl {
+    @media (width >= 40rem) {
+      max-width: var(--container-2xl);
+    }
+  }
   .sm\:max-w-3xl {
     @media (width >= 40rem) {
       max-width: var(--container-3xl);
@@ -847,6 +875,16 @@
   .sm\:bg-\[url\(https\:\/\/fileserver\.touhouengie\.com\/drive\/webpage_data\/wallpaper\.png\)\] {
     @media (width >= 40rem) {
       background-image: url(https://fileserver.touhouengie.com/drive/webpage_data/wallpaper.png);
+    }
+  }
+  .sm\:p-0 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
+  .sm\:py-0 {
+    @media (width >= 40rem) {
+      padding-block: calc(var(--spacing) * 0);
     }
   }
 }
